formatusb (23.11.02) mx; urgency=medium

  * remove mx-launcher-l10n from depends, make recommend
  * fix messages in lib script
  * use path for parted command in create_partition

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 05 Nov 2023 19:44:32 -0500

formatusb (23.11.01) mx; urgency=medium

  * improve root action handling
  * check if running root already before launching an authenticator

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sun, 05 Nov 2023 14:45:40 -0500

formatusb (23.07.02) mx; urgency=medium

  * fix localized "Defaults" string

 -- fehlix <fehlix@mxlinux.org>  Sun, 30 Jul 2023 16:22:36 -0500

formatusb (23.07.01) mx; urgency=medium

  * disable next button if name invalid
  * only warn once about invalid name

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Fri, 07 Jul 2023 12:10:22 -0400

formatusb (23.06.01) mx; urgency=medium

  * validate file system labels
  * allow no label
  * improve error handling

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 29 Jun 2023 23:28:12 -0400

formatusb (23.05.05) mx; urgency=medium

  * update logo

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 17 May 2023 00:25:00 -0400

formatusb (23.05.03) mx; urgency=medium

  * mx-launcher-l10n strings in policy file

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Fri, 12 May 2023 22:10:27 -0400

formatusb (23.05.01) mx; urgency=medium

  * update translations
  * translate policy files

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 04 May 2023 21:13:19 -0400

formatusb (22.10.01) mx; urgency=medium

  * update translations

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Wed, 26 Oct 2022 19:37:42 -0400

formatusb (22.08.01) mx; urgency=medium

  * add fr_BE

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 15 Aug 2022 19:06:27 -0400

formatusb (22.07.01) mx; urgency=medium

  * translation refresh

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 23 Jul 2022 11:10:45 -0400

formatusb (22.06.01) mx; urgency=medium
