@@ -112,16 +112,13 @@ QString MainWindow::buildOptionList()
     QString authentication = "pkexec";
     options = QString(authentication + " /usr/lib/formatusb/formatusb_lib \"" + device + "\" " + format + " \"" + label + "\" " + partoption + "");
 
-    if ( !QFile::exists("/usr/bin/pkexec")){
-            authentication = "su-to-root -X -c";
-            options = QString(authentication + " '/usr/lib/formatusb/formatusb_lib \"" + device + "\" " + format + " \"" + label + "\" " + partoption + "'");
+    if ( !QFile::exists("/usr/bin/pkexec") && QFile::exists("/usr/bin/gksu")){
+            authentication = "gksu";
 	}
 
     if (getuid() == 0 ) {
             authentication = "";
-            options = QString("/usr/lib/formatusb/formatusb_lib \"" + device + "\" " + format + " \"" + label + "\" " + partoption + "");
     }
-
 
     options = options.trimmed();
     qDebug() << "partition is" << device << "label " << label;
